--- a/FO4RKV_HFT_2022231.Test/FO4RKV_HFT_2022231.Test.csproj
+++ b/FO4RKV_HFT_2022231.Test/FO4RKV_HFT_2022231.Test.csproj
@@ -12,6 +12,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
