Fixed major bug where program didn't launch swagger properly

--- a/FO4RKV_HFT_2022231.Endpoint/Properties/launchSettings.json
+++ b/FO4RKV_HFT_2022231.Endpoint/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "http://localhost:14705/swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
